# darwinex_to_ohlc

./: .env.example  .gitignore  CMakeLists.txt
src/: main.cpp
src/decompress/: decompress.cpp  decompress.h
src/dotenv/: dotenv.cpp  dotenv.h
src/ftp/: ftp_client.cpp  ftp_client.h
src/organizer/: organizer.cpp  organizer.h
src/transform/: transform.cpp  transform.h
src/writer/: writer.cpp  writer.h
